landing page update

--- a/html/index.html
+++ b/html/index.html
@@ -180,11 +180,11 @@
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
           <div class="blankHTiny"></div>
 
-          <h1 class="specialTextTitle fontWeight700">Designing UX that’s </h1>
-          <h1 class="specialTextTitle fontWeight700 displayTablet colorLandingText"> smooth, intuitive, impactful</h1>
-          <h1 class="specialTextTitle fontWeight700 displayPhone colorLandingText"> smooth, intuitive, impactful</h1>
-          <h1 class="specialTextTitle fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
-          <h1 class="specialTextTitle fontWeight700">for users & businesses.</h1>
+          <h1 class="specialTextTitle fontWeight700">Designing experience that’s </h1>
+          <h1 class="specialTextTitleMidLine fontWeight700 displayTablet colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitleMidLine fontWeight700 displayPhone colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
 
 
           </h1>
@@ -295,7 +295,7 @@
         </div>
       </div>
 
-      <div class="blankHS"></div>
+      <div class="blankHXS"></div>
 
       <div class="wrapper">
 
@@ -304,8 +304,8 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background1">
-                <a href="/byp_b2b_booking">
-                  <img class="borderRadiusL" src="/projectImages/b2b_booking.gif" alt="Business Booking Experience"></a>
+                
+                  <img class="borderRadiusL" src="/projectImages/b2b_booking.gif" alt="Business Booking Experience">
               </div>
             </div>
 
@@ -337,10 +337,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+
           </div>
         </div>
         <div class="blankHS"></div>
@@ -349,8 +346,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background2">
-                <a href="/byp_b2b_subscription/">
-                  <img src="/projectImages/Cover_b2b_subscription.gif" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/Cover_b2b_subscription.gif" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -387,10 +383,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/byp_b2b_subscription/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+ 
           </div>
 
         </div>
@@ -415,8 +408,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background3">
-                <a href="/byp_b2c_booking">
-                  <img src="/projectImages/mobile_b2c_booking.svg" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/mobile_b2c_booking.svg" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -451,10 +443,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+ 
           </div>
 
         </div>
@@ -480,8 +469,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background2">
-                <a href="/byp_b2b_SaaS/">
-                  <img src="/projectImages/b2b_booking.svg" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/b2b_booking.svg" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -512,10 +500,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/byp_b2b_SaaS/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+
           </div>
 
         </div>
@@ -543,8 +528,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background1">
-                <a href="/savings_calculator/">
-                  <img src="/projectImages/savings_calculator.svg" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/savings_calculator.svg" alt="Business Booking Experience">
               </div>
             </div>
 
@@ -575,10 +559,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/savings_calculator/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+ 
           </div>
         </div>
         <div class="blankHS"></div>
@@ -587,8 +568,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background3">
-                <a href="/refining_rx_zero/">
-                  <img src="/projectImages/rx_zero.png" alt="RX Zero"></a>
+                  <img src="/projectImages/rx_zero.png" alt="RX Zero">
               </div>
             </div>
           </div>
@@ -622,10 +602,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/refining_rx_zero/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+
           </div>
 
         </div>
@@ -652,8 +629,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background2">
-                <a href="/admin_panel/">
-                  <img src="/projectImages/admin_panel.svg" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/admin_panel.svg" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -687,10 +663,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/admin_panel/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+
           </div>
 
         </div>
