--- a/html/index.html
+++ b/html/index.html
@@ -174,20 +174,44 @@
 
   <div class="blankHS"></div>
   <div class="wrapper">
-    <div class="Grid Grid--full Grid--gutter u-textCenter">
+    <div class="Grid Grid--full Grid--gutter">
       <div class="Grid-cell">
-        <div class="element">
+        <div class="element displayLaptop  u-textCenter">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
           <div class="blankHTiny"></div>
 
-          <h1 class="specialTextTitle fontWeight700">Designing experience that’s </h1>
-          <h1 class="specialTextTitleMidLine fontWeight700 displayTablet colorLandingText"> smooth, intuitive, impactful</h1>
-          <h1 class="specialTextTitleMidLine fontWeight700 displayPhone colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
+   
           <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
           <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
+        </div>
+        <div class="element displayTablet  u-textCenter">
+          <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
+          <div class="blankHTiny"></div>
+
+          <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
+   
+          <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
+        </div>
+        <div class="element displayPhone">
+          <div class="element">
+            <h1 class="t-hello"> 👋🏻 hello, I'm Vicky</h1>
+            <div class="blankHTiny"></div>
+  
+            <h1 class="specialTextTitle fontWeight700">Designing experiences</h1>
+            <h1 class="specialTextTitle fontWeight700">that are </h1>
+  
+            <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> smooth, </h1>
+  
+            <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> intuitive, </h1>
+  
+            <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> impactful</h1>
+            <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
+          </div>
 
 
-          </h1>
+
         </div>
       </div>
     </div>
