--- a/html/architecture/the_rotation_of_curves/index.html
+++ b/html/architecture/the_rotation_of_curves/index.html
@@ -480,53 +480,45 @@
 
   <div class="blankHXS"></div>
 <div class="Grid Grid--full Grid--gutters u-textCenter">
-    <ul class="tags" id="TagsCloud">
+  <ul class="tags" id="TagsCloud">
 
+    <!-- Identity -->
+    <li class="tag"><span class="box">Creative Designer & Strategic Thinker</span></li>
+    <li class="tag"><span class="box">System-Level Thinking in UX</span></li>
+    <li class="tag"><span class="box">UX Designer · SF Bay Area</span></li>
 
-      <li class="tag"><span class="box"> Creative designer, Strategic thinker </span></li>
+    <!-- Roles & Domains -->
+    <li class="tag"><span class="box">Marketplace UX for Baby Gear Rentals (Mobile & Web)</span></li>
+    <li class="tag"><span class="box">B2B Inventory Management Experience</span></li>
+    <li class="tag"><span class="box">B2B SaaS Product Design</span></li>
 
+    <!-- Skills & Tools -->
+    <li class="tag"><span class="box">Design Systems & Responsive Layouts in Figma</span></li>
+    <li class="tag"><span class="box">Front-End: HTML, CSS, JavaScript, EJS</span></li>
+    
+    <!-- UX Expertise -->
+    <li class="tag"><span class="box">Design Thinking in Action</span></li>
+    <li class="tag"><span class="box">User-Centered Workflow Design</span></li>
+    <li class="tag"><span class="box">Journey Mapping for Complex Flows</span></li>
+    <li class="tag"><span class="box">Usability Testing & Iteration</span></li>
+    <li class="tag"><span class="box">UX Research & Insights</span></li>
 
+    <!-- Deliverables -->
+    <li class="tag"><span class="box">Live SaaS & Mobile Design Case Studies</span></li>
+    <li class="tag"><span class="box">Design Impact on Conversion & Engagement</span></li>
 
-      <li class="tag"><span class="box"> B2B SaaS Product Designer</span></li>
-      <li class="tag"><span class="box"> SaaS UX Design Expert</span></li>
-      <li class="tag"><span class="box"> Mobile App Design Specialist</span></li>
+    <!-- Mindset -->
+    <li class="tag"><span class="box">Collaborative Problem Solver</span></li>
+    <li class="tag"><span class="box">Cross-Functional Collaboration with PM & Engineering</span></li>
+    <li class="tag"><span class="box">Always Iterating, Always Learning</span></li>
+    <li class="tag"><span class="box">Tech-Driven Design Innovation</span></li>
+    <li class="tag"><span class="box">Accessibility Considerations in UX</span></li>
 
-
-
-
-      <li class="tag"><span class="box"> User Experience Optimization for B2B SaaS </span></li>
-      <li class="tag"><span class="box"> Consumer Mobile App Design Best Practices</span></li>
-
-
-      <li class="tag"><span class="box"> Figma for Responsive Web Design</span></li>
-      <li class="tag"><span class="box"> Adobe Creative Suite in UX/UI Design</span></li>
-      <li class="tag"><span class="box"> Front-End Development Skills: HTML, CSS, JavaScript</span></li>
-
-
-      <li class="tag"><span class="box"> Design Thinking for UX Solutions</span></li>
-      <li class="tag"><span class="box"> User-Centered Design Approach</span></li>
-      <li class="tag"><span class="box"> Journey Mapping in Product Development </span></li>
-      <li class="tag"><span class="box"> Usability Testing for Application Improvement </span></li>
-
-
-
-      <li class="tag"><span class="box"> Portfolio of SaaS UX Design Projects</span></li>
-      <li class="tag"><span class="box"> Case Studies on Enhancing User Engagement</span></li>
-      <li class="tag"><span class="box"> Success Stories in Mobile App User Interface Design</span></li>
-      <li class="tag"><span class="box"> Design Process Behind Successful Consumer Apps</span></li>
-
-
-      <li class="tag"><span class="box"> Collaborative Problem Solving in Design Teams</span></li>
-      <li class="tag"><span class="box"> Continuous Learning in UX/UI Design</span></li>
-      <li class="tag"><span class="box"> Adopting New Technologies for Design Innovation</span></li>
-      <li class="tag"><span class="box"> UX Research Techniques and Insights</span></li>
+  </ul>
+</div>
 
 
 
-      <li class="tag"><span class="box"> UX Designer in SF Bay Area for SaaS and Mobile Apps</span></li>
-
-    </ul>
-  </div>
   <div class="blankHXS"></div>
 
   
@@ -684,7 +676,7 @@
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
-              <h5 class="Grey700"> &#169; 2020 - 2025 &#8212; vickywang.me | Shaping seamless digital experiences.</h5>
+              <h5 class="Grey700"> &#169; 2020 - 2025 vickywang.me | shaping seamless digital experiences.</h5>
             </div>
           </div>
         </div>
@@ -692,6 +684,8 @@
     </div>
 
   </footer>
+
+
   <!-- Shared across the platform -->
 
 </body>
