--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -7378,7 +7378,7 @@ strong {
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
-              <h5 class="Grey700"> &#169; 2020 - 2025 &#8212; vickywang.me | Shaping seamless digital experiences.</h5>
+              <h5 class="Grey700"> &#169; 2020 - 2025 vickywang.me | shaping seamless digital experiences.</h5>
             </div>
           </div>
         </div>
@@ -7386,6 +7386,8 @@ strong {
     </div>
 
   </footer>
+
+
   <!-- Shared across the platform -->
 </body>
 
