--- a/html/index.html
+++ b/html/index.html
@@ -683,7 +683,8 @@
 <h6 class="chipSmall colorBg_VW_Pink200 color_VW_Pink800">
   0-1 Experiment
 </h6>
-              <h3 class="arrCard"><strong>Marketing Insights Dashboard</strong></h3>
+         
+              <h3 class="TextPoppins fontWeight500">Marketing Dashboard </h3>
 
               <h3 class="colorLandingText fontWeight700"> For Brand marketers
 
@@ -714,7 +715,7 @@
 <h6 class="chipSmall colorBg_VW_Pink200 color_VW_Pink800">
   0-1 Experiment
 </h6>
-              <h3 class="arrCard"><strong>Interview Scheduling</strong></h3>
+              <h3 class="TextPoppins fontWeight500">Interview Scheduling</h3>
               <h3 class="colorLandingText fontWeight700"> For Recuriter & hiring managers
 
               </h3>
@@ -1557,8 +1558,11 @@
               <div class="Grid-cell">
                 <h5> <strong> Projects </strong> </h5>
                 <div class="blankHTiny"></div>
-                <h6 class="fontWeight400">pet business owners booking appointments for their customers</h6>
-        
+                <h6 class="fontWeight400">Faster Appointment Management
+                </h6>
+                <h6>For pet business owners booking appointments for their customers
+                </h6>
+
                 <h6 class="fontWeight400"> Customer Booking Experience
                 </h6>
                 <h6>Optimizing the booking process to improve customer satisfaction and drive higher engagement.</h6>
