--- a/html/seer/index.html
+++ b/html/seer/index.html
@@ -541,7 +541,6 @@
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_Sentiment.svg" alt="icon">
-                        <div class="blankHXS"></div>
                         <h4> <strong> Sentiment </strong> </h4>
                         <h5>Sentiment analysis is a natural language processing technique used
                           to determine whether data is positive, negative or neutral.</h5>
@@ -558,7 +557,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_Upvote.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Upvote ratio </strong> </h4>
                         <h5>Upvote ratio is used to determine how popular the post is. A higher
                           ratio
@@ -574,7 +572,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_Users.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Subreddit </strong> </h4>
                         <h5>Each subreddit is moderated by a team of volunteer moderators who
                           enforce a set of rules.</h5>
@@ -594,7 +591,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_Calendar.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Timestamp </strong> </h4>
                         <h5>Timestamp indicating when the post was created on the platform.</h5>
                       </div>
@@ -608,7 +604,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_feather.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Title </strong> </h4>
                         <h5>Access titles from Reddit posts to search titles across the entire
                           Reddit platform. </h5>
@@ -623,7 +618,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_Document.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Conmment </strong> </h4>
                         <h5>Developers can use the API to retrieve information about posts </h5>
                       </div>
@@ -637,7 +631,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_User.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Author </strong> </h4>
                         <h5>Get information about Reddit authors, such as
                           their karma score and post history.</h5>
@@ -749,9 +742,8 @@
               <div class="Grid Grid--gutters Grid--cols-3">
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInnerL cardSEER heightM">
+                    <div class="elementInnerL cardSEER heightS">
                       <img class="iconM" src="icon_DataBG.svg" alt="icon">
-                      <div class="blankHXS"></div>
                       <h4> <strong> Find data</strong> </h4>
 
                       <ul>
@@ -762,10 +754,9 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInnerL cardSEER heightM">
+                    <div class="elementInnerL cardSEER heightS">
                       <img class="iconM" src="icon_DataBG.svg" alt="icon">
 
-                      <div class="blankHXS"></div>
 
                       <h4> <strong> Filter data</strong> </h4>
 
@@ -777,10 +768,9 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInnerL cardSEER heightM">
+                    <div class="elementInnerL cardSEER heightS">
                       <img class="iconM" src="icon_DataBG.svg" alt="icon">
 
-                      <div class="blankHXS"></div>
                       <h4> <strong> Structure data</strong> </h4>
                       <ul>
                         <li> It takes time to analyze and compare user data</li>
@@ -980,7 +970,6 @@
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Document.svg" alt="icon">
-                        <div class="blankHXS"></div>
                         <h5> <strong> Setup the keywords </strong> </h5>
                         <ul>
                           <li> Monitor the data according to the user's requirements</li>
@@ -998,7 +987,6 @@
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Chart.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h5> <strong> Display data </strong> </h5>
                         <ul>
                           <li>Clear and concise data presentation</li>
@@ -1015,7 +1003,6 @@
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Data.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h5> <strong> Data Comparison </strong> </h5>
                         <ul>
                           <li> Retrieve data within a specified timeframe</li>
@@ -1033,7 +1020,6 @@
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Alert.svg" alt="icon">
-                        <div class="blankHXS"></div>
                         <h5> <strong> New keyword feed alert </strong> </h5>
                         <ul>
                           <li>Stay informed of all developments regarding [keyword].</li>
@@ -1047,7 +1033,6 @@
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Data.svg" alt="icon">
-                        <div class="blankHXS"></div>
                         <h5> <strong>Identify the distinctive data </strong> </h5>
                         <ul>
                           <li> Data drill down</li>
@@ -1063,7 +1048,6 @@
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Download.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h5> <strong> Export Data </strong> </h5>
                         <ul>
                           <li>Export data share with team</li>
