--- a/html/index.html
+++ b/html/index.html
@@ -330,7 +330,7 @@
 
               <h1 class="fontWeight700">Faster Appointment Management </h1>
 
-           
+
               <ul>
 
                 <li class="listCircle">Reduced average booking time from 5 minutes to less than 1 minute, making the process over 80% faster.
@@ -683,7 +683,7 @@
 <h6 class="chipSmall colorBg_VW_Pink200 color_VW_Pink800">
   0-1 Experiment
 </h6>
-         
+
               <h3 class="TextPoppins fontWeight500">Marketing Dashboard </h3>
 
               <h3 class="colorLandingText fontWeight700"> For Brand marketers
@@ -1528,7 +1528,8 @@
     <div class="wrapper">
       <div class="element">
         <div class="Grid Grid--gutters Grid--1of4">
-          <div class="Grid-cell">
+          <div class="Grid-cell">            <div class="elementTB">
+
             <div class="element">
               <a href="/" class=""><img class="widthXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
             </div>
@@ -1551,68 +1552,73 @@
                 <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
               </a>
 
-            </div>
+            </div></div>
           </div>
+
           <div class="Grid-cell">
             <div class="Grid Grid--gutters Grid--cols-2">
               <div class="Grid-cell">
-                <h5> <strong> Projects </strong> </h5>
-                <div class="blankHTiny"></div>
-                <h6 class="fontWeight400">Faster Appointment Management
-                </h6>
-                <h6>For pet business owners booking appointments for their customers
-                </h6>
+                <div class="elementTB">
+                  <h4> <strong> Projects </strong> </h4>
+                  <div class="blankHTiny"></div>
+                  <h6 class="fontWeight400">Faster Appointment Management
+                  </h6>
+                  <h6>For pet business owners booking appointments for their customers
+                  </h6>
 
-                <h6 class="fontWeight400"> Customer Booking Experience
-                </h6>
-                <h6>Optimizing the booking process to improve customer satisfaction and drive higher engagement.</h6>
-                <div class="blankHTiny"></div>
-                <h6 class="fontWeight400">Optimizing SaaS Subscription Growth
-                </h6>
-                <h6>Optimize the B2B onboarding and subscription experience</h6>
-
-
-
-
-                <div class="blankHTiny"></div>
-                <h6 class="fontWeight400"> RX Zero</h6>
-                <h6>Subscription-based generic medication selling</h6>
+                  <h6 class="fontWeight400"> Customer Booking Experience
+                  </h6>
+                  <h6>Optimizing the booking process to improve customer satisfaction and drive higher engagement.</h6>
+                  <div class="blankHTiny"></div>
+                  <h6 class="fontWeight400">Optimizing SaaS Subscription Growth
+                  </h6>
+                  <h6>Optimize the B2B onboarding and subscription experience</h6>
 
 
-                <div class="blankHTiny"></div>
-                <h6 class="fontWeight400"> Savings Calculator</h6>
 
-                <h6>Uncover Prescription Meds Savings</h6>
 
-                <div class="blankHTiny"></div>
-                <h6 class="fontWeight400">Admin Panel</h6>
-                <h6>Empowering CX managers and sales teams</h6>
+                  <div class="blankHTiny"></div>
+                  <h6 class="fontWeight400"> RX Zero</h6>
+                  <h6>Subscription-based generic medication selling</h6>
+
+
+                  <div class="blankHTiny"></div>
+                  <h6 class="fontWeight400"> Savings Calculator</h6>
+
+                  <h6>Uncover Prescription Meds Savings</h6>
+
+                  <div class="blankHTiny"></div>
+                  <h6 class="fontWeight400">Admin Panel</h6>
+                  <h6>Empowering CX managers and sales teams</h6>
+                </div>
               </div>
 
 
               <div class="Grid-cell">
-                <h5> <strong> Experiments </strong> </h5>
-                <div class="blankHTiny"></div>
-                <a href="/glorify/">
-                  <h6 class="fontWeight400"> Glorify</h6>
-                </a>
-                <h6>Elevating Community Involvement</h6>
+                <div class="elementTB">
 
-                <div class="blankHTiny"></div>
+                  <h4> <strong> Experiments </strong> </h4>
+                  <div class="blankHTiny"></div>
+                  <a href="/glorify/">
+                    <h6 class="fontWeight400"> Glorify</h6>
+                  </a>
+                  <h6>Elevating Community Involvement</h6>
 
-                <a href="/appointa/">
-                  <h6 class="fontWeight400"> APPOINTA</h6>
-                </a>
-                <h6>Simplifying Interview Coordination</h6>
+                  <div class="blankHTiny"></div>
 
-                <div class="blankHTiny"></div>
-                <a href="/seer/">
-                  <h6 class="fontWeight400">SEER</h6>
-                </a>
-                <h6>Empowering Brand Managers with Insights</h6>
+                  <a href="/appointa/">
+                    <h6 class="fontWeight400"> Appointa</h6>
+                  </a>
+                  <h6>Simplifying Interview Coordination</h6>
+
+                  <div class="blankHTiny"></div>
+                  <a href="/seer/">
+                    <h6 class="fontWeight400">Seer</h6>
+                  </a>
+                  <h6>Empowering Brand Managers with Insights</h6>
 
 
-
+                </div>
               </div>
 
 
@@ -1628,9 +1634,11 @@
       <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="footerBorder">
+            <div class="elementTB">
+
             <div class="element">
               <h5 class="Grey700"> © 2020 - 2025 vickywang.me | shaping seamless digital experiences.</h5>
-
+</div>
             </div>
           </div>
         </div>
