--- a/html/architecture/thesis_studio/index.html
+++ b/html/architecture/thesis_studio/index.html
@@ -925,102 +925,115 @@
     <div class="blankHXS"></div>
     <div class="wrapper">
       <div class="element">
+
         <div class="Grid Grid--gutters Grid--1of4">
           <div class="Grid-cell">
-            <div class="element">
-              <a href="/" class=""><img class="widthXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-            </div>
-            <div class="Grid Grid--gutters">
-              <div class="ClipboardBoxIconOnly">
-                <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconM   paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
-                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                </button>
+            <div class="elementTB">
+
+              <div class="element">
+                <a href="/" class=""><img class="widthXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
               </div>
-              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
-              </a>
+              <div class="Grid Grid--gutters">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly">
+                    <img title="Copy Email Address to Clipboard" class="iconM   paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                  </button>
+                </div>
+                <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                  <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
+                </a>
 
-              <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
-              </a>
+                <a target="_blank" href="https://github.com/vicky-wyq">
+                  <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
+                </a>
 
-              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
-              </a>
+                <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                  <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
+                </a>
 
+              </div>
             </div>
           </div>
           <div class="Grid-cell">
+
             <div class="Grid Grid--gutters Grid--cols-2">
+
               <div class="Grid-cell">
-                <h5> <strong> Projects </strong> </h5>
-                <div class="blankHTiny"></div>
-                <a href="/byp_b2b_booking/">
-                  <h6 class="fontWeight400"> Business Booking Experience </h6>
-                </a>
-                <h6>For pet business owners booking appointments for their customers</h6>
-                <div class="blankHTiny"></div>
-                <a href="/byp_b2b_booking/">
-                  <h6 class="fontWeight400"> Customer Booking Experience
-                  </h6>
-                </a>
-                <h6>Optimizing the booking process to improve customer satisfaction and drive higher engagement.</h6>
-                <div class="blankHTiny"></div>
-                <a href="/byp_b2b_subscription/">
-                  <h6 class="fontWeight400">Optimizing SaaS Subscription Growth
-                  </h6>
-                </a>
-                <h6>Optimize the B2B onboarding and subscription experience</h6>
+                <div class="elementTB">
+
+                  <h4> <strong> Projects </strong> </h4>
+                  <div class="blankHTiny"></div>
+                  <a href="/byp_b2b_booking/">
+                    <h6 class="fontWeight400"> Business Booking Experience </h6>
+                  </a>
+                  <h6>For pet business owners booking appointments for their customers</h6>
+                  <div class="blankHTiny"></div>
+                  <a href="/byp_b2b_booking/">
+                    <h6 class="fontWeight400"> Customer Booking Experience
+                    </h6>
+                  </a>
+                  <h6>Optimizing the booking process to improve customer satisfaction and drive higher engagement.</h6>
+                  <div class="blankHTiny"></div>
+                  <a href="/byp_b2b_subscription/">
+                    <h6 class="fontWeight400">Optimizing SaaS Subscription Growth
+                    </h6>
+                  </a>
+                  <h6>Optimize the B2B onboarding and subscription experience</h6>
 
 
 
 
-                <div class="blankHTiny"></div>
-                <a href="/refining_rx_zero/">
-                  <h6 class="fontWeight400"> RX Zero</h6>
-                </a>
-                <h6>Subscription-based generic medication selling</h6>
+                  <div class="blankHTiny"></div>
+                  <a href="/refining_rx_zero/">
+                    <h6 class="fontWeight400"> RX Zero</h6>
+                  </a>
+                  <h6>Subscription-based generic medication selling</h6>
 
 
-                <div class="blankHTiny"></div>
-                <a href="/savings_calculator/">
-                  <h6 class="fontWeight400"> Savings Calculator</h6>
+                  <div class="blankHTiny"></div>
+                  <a href="/savings_calculator/">
+                    <h6 class="fontWeight400"> Savings Calculator</h6>
 
-                </a>
-                <h6>Uncover Prescription Meds Savings</h6>
+                  </a>
+                  <h6>Uncover Prescription Meds Savings</h6>
 
-                <div class="blankHTiny"></div>
-                <a href="/admin_panel/">
-                  <h6 class="fontWeight400">Admin Panel</h6>
-                </a>
-                <h6>Empowering CX managers and sales teams</h6>
+                  <div class="blankHTiny"></div>
+                  <a href="/admin_panel/">
+                    <h6 class="fontWeight400">Admin Panel</h6>
+                  </a>
+                  <h6>Empowering CX managers and sales teams</h6>
+                </div>
               </div>
 
 
+
               <div class="Grid-cell">
-                <h5> <strong> Experiments </strong> </h5>
-                <div class="blankHTiny"></div>
-                <a href="/glorify/">
-                  <h6 class="fontWeight400"> Glorify</h6>
-                </a>
-                <h6>Elevating Community Involvement</h6>
+                <div class="elementTB">
 
-                <div class="blankHTiny"></div>
+                  <h4> <strong> Experiments </strong> </h4>
+                  <div class="blankHTiny"></div>
+                  <a href="/glorify/">
+                    <h6 class="fontWeight400"> Glorify</h6>
+                  </a>
+                  <h6>Elevating Community Involvement</h6>
 
-                <a href="/appointa/">
-                  <h6 class="fontWeight400"> APPOINTA</h6>
-                </a>
-                <h6>Simplifying Interview Coordination</h6>
+                  <div class="blankHTiny"></div>
 
-                <div class="blankHTiny"></div>
-                <a href="/seer/">
-                  <h6 class="fontWeight400">SEER</h6>
-                </a>
-                <h6>Empowering Brand Managers with Insights</h6>
+                  <a href="/appointa/">
+                    <h6 class="fontWeight400"> APPOINTA</h6>
+                  </a>
+                  <h6>Simplifying Interview Coordination</h6>
+
+                  <div class="blankHTiny"></div>
+                  <a href="/seer/">
+                    <h6 class="fontWeight400">SEER</h6>
+                  </a>
+                  <h6>Empowering Brand Managers with Insights</h6>
 
 
 
+                </div>
               </div>
 
 
@@ -1045,8 +1058,6 @@
     </div>
 
   </footer>
-
-
   <!-- Shared across the platform -->
 
 </body>
