--- a/html/glorify/index.html
+++ b/html/glorify/index.html
@@ -5222,7 +5222,7 @@
 
   <footer class="borderTop  ">
 
-    <div class="blankHXS"></div>
+    <div class="blankHXXS"></div>
     <div class="wrapper">
       <div class="element">
 
@@ -5231,8 +5231,10 @@
             <div class="elementTB">
 
               <div class="element">
+                <div class="blankHTiny"></div>
+
                 <a href="/" class=""><img class="widthXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-              </div>
+              </div></div>
               <div class="Grid Grid--gutters">
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
@@ -5251,8 +5253,6 @@
                 <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
                   <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
                 </a>
-
-              </div>
             </div>
           </div>
           <div class="Grid-cell">
@@ -5321,13 +5321,13 @@
                   <div class="blankHTiny"></div>
 
                   <a href="/appointa/">
-                    <h6 class="fontWeight400"> APPOINTA</h6>
+                    <h6 class="fontWeight400"> Appointa</h6>
                   </a>
                   <h6>Simplifying Interview Coordination</h6>
 
                   <div class="blankHTiny"></div>
                   <a href="/seer/">
-                    <h6 class="fontWeight400">SEER</h6>
+                    <h6 class="fontWeight400">Seer</h6>
                   </a>
                   <h6>Empowering Brand Managers with Insights</h6>
 
