spacing, font, content

--- a/html/index.html
+++ b/html/index.html
@@ -379,11 +379,11 @@
               <h1 class="fontWeight700">Optimizing SaaS Subscription Growth
               </h1>
               <ul class="listCircle">
-                <li> <span class="TextPoppins fontWeight500">Streamlined Onboarding:</span> Reduced average onboarding time by 30% and increased completion rates by 40%.
+                <li> <span class="TextPoppins fontWeight400">Streamlined Onboarding:</span> Reduced average onboarding time by 30% and increased completion rates by 40%.
                 </li>
-                <li> <span class="TextPoppins fontWeight500">Improved User Satisfaction:</span> Enhanced clarity and guidance, boosting satisfaction by 25%.
+                <li> <span class="TextPoppins fontWeight400">Improved User Satisfaction:</span> Enhanced clarity and guidance, boosting satisfaction by 25%.
                 </li>
-                <li> <span class="TextPoppins fontWeight500">Increased Conversions:</span> Achieved a 20% growth in trial-to-paid subscriptions.
+                <li> <span class="TextPoppins fontWeight400">Increased Conversions:</span> Achieved a 20% growth in trial-to-paid subscriptions.
 
                 </li>
               </ul>
@@ -1570,6 +1570,8 @@
             <div class="elementTB">
 
               <div class="element">
+                <div class="blankHTiny"></div>
+
                 <a href="/" class=""><img class="widthXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
               </div>
               <div class="Grid Grid--gutters">
@@ -1583,9 +1585,7 @@
                   <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
                 </a>
 
-                <a target="_blank" href="https://github.com/vicky-wyq">
-                  <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
-                </a>
+             
 
                 <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
                   <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
