--- a/html/index.html
+++ b/html/index.html
@@ -1037,8 +1037,7 @@
 
 
     <!-- import timeline -->
-    
-<div class="blankHXXS"></div>
+    <div class="blankHXXS"></div>
 <div class="wrapper">
   <div class="Grid Grid--full Grid--gutters u-textCenter">
     <div class="Grid-cell">
@@ -1064,8 +1063,11 @@
                 <h6 class="TextPoppins textItalic">2024 – Present</h6>
                 <h6 class="TextPoppins textItalic">Full-time &#64; BabyQuip </h6>
                 <h4 class="fontWeight400 colorYellowVW700">Baby Gear Rental </h4>
+
                 <ul>
-                  <li>&#9675; Marketplace </li>
+                  <li>&#9675; B2C marketplace: baby gear search, rental, and checkout </li>
+                  <li>&#9675; Partner dashboard: inventory management & gear listing</li>
+
                 </ul>
 
               </div>
@@ -1083,17 +1085,15 @@
                 <h6 class="TextPoppins textItalic">2021 – 2024</h6>
                 <h6 class="TextPoppins textItalic">Full-time &#64; BookYourPet</h6>
 
-                <h4 class="fontWeight400 colorYellowVW700">Business SaaS Booking App</h4>
+                <h4 class="fontWeight400 colorYellowVW700">Pet Booking Platform</h4>
                 <ul>
-                  <li>&#9675; Pet service booking system
-                  </li>
-                  <li>&#9675; Operations management tool </li>
+                  <li>&#9675; B2B SaaS: pet service booking</li>
+                  <li>&#9675; B2C mobile: customer booking & payment</li>
+                  <li>&#9675; Admin dashboard: operations management</li>
+
                 </ul>
 
-                <h4 class="fontWeight400 colorYellowVW700">Consumer Booking Mobile App </h4>
-                <ul>
-                  <li>&#9675; Booking & Payment </li>
-                </ul>
+
               </div>
             </div>
           </div>
@@ -1108,10 +1108,10 @@
                 <h3 class="page__job-name fontWeight400">Product Designer</h3>
                 <h6 class="TextPoppins textItalic">2023 – 2024</h6>
                 <h6 class="TextPoppins textItalic">Part-time &#64; LASO Health</h6>
-                <h4 class="fontWeight400 colorYellowVW700">Prescription Medication Sales</h4>
+                <h4 class="fontWeight400 colorYellowVW700">Prescription Medication Sales Platform </h4>
                 <ul>
-                  <li>&#9675; UX research for marketing web pages</li>
-                  <li>&#9675; Super Admin panel for effective user management</li>
+                  <li>&#9675; Marketing website: UX research for consumer messaging</li>
+                  <li>&#9675; Super Admin panel: user account management & permission control</li>
                 </ul>
 
               </div>
