--- a/html/index.html
+++ b/html/index.html
@@ -1238,17 +1238,11 @@
                 </h3>
 
 
-                <h6 class="TextPoppins textItalic">2017</h6>
-                <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; In Design Studio </h6>
-                <h6>&#9675; Building elevation, section, details documents
+                <h6 class="TextPoppins textItalic">2010–2017</h6>
+                <h6 class="TextPoppins textItalic fontWeight400">Part-time & full-time across multiple firms</h6>
+                <h6>&#9675; Concept development, visualization, construction documents
                 </h6>
 
-                <div class="blankHTiny"></div>
-
-                <h6 class="TextPoppins textItalic">2010 &#8211; 2012</h6>
-                <h6 class="TextPoppins textItalic fontWeight400">Part-time &#64; <a href="http://chengdapeng.art/" class="textUnderline"> Do Union </a></h6>
-                <h6>&#9675; Concept & Visualization
-                </h6>
 
 
 
@@ -1295,7 +1289,10 @@
               <div class="uia-card__intro">
                 <h3 class="page__job-name fontWeight400">Professional Training & Certifications</h3>
                 <h6 class="TextPoppins textItalic fontWeight400">2021 – Present, Online</h6>
-                <h6>&#9675; Udemy: The Complete <a href="/javascript-learning/" class="textUnderline">JavaScript Course</a> Course (2024)
+                <h6>&#9675; Udemy: The Complete <a href="/javascript-learning/" class="textUnderline">JavaScript</a> (2024)
+                </h6>
+
+                <h6>&#9675;<a href="https://www.udemy.com/certificate/UC-052eaeb2-989a-42a8-8481-5035c55fd42c/" class="textUnderline"> Become a Product Manager</a> (2023)
                 </h6>
 
 
@@ -1349,7 +1346,7 @@
   <div class="Grid Grid--full Grid--gutters u-textCenter">
     <div class="Grid-cell">
       <div class="element">
-        <h1 class="TextPoppins fontWeight100 Grey800"> Visual Practice</h1>
+        <h1 class="TextPoppins fontWeight100 Grey800"> Leisure Activities </h1>
 
       </div>
     </div>
@@ -1368,18 +1365,16 @@
           <div class="uia-timeline__point uia-card">
             <div class="uia-card__container">
               <div class="uia-card__intro">
-                <h3 class="page__job-name fontWeight400"><a href="/photography" class="textUnderline">Photography</a> </h3>
-
-                <h6 class="TextPoppins textItalic fontWeight400">2017 - Present, Part-time</h6>
-                <h6>Nature & Wildlife</h6>
-                <div class="blankHTiny"></div>
-
-
-                <h3 class="page__job-name fontWeight400">Drawing & Painting
-
+                <h3 class="page__job-name fontWeight400">Visual Practice
                 </h3>
-                <h6 class="TextPoppins textItalic">From childhood through college.
+
+                <h6>&#9675; <a href="/photography" class="textUnderline">Photography</a> (2017–Present): nature & wildlife
                 </h6>
+                <h6>&#9675; Drawing & painting (childhood–college): visual expression & form study
+                </h6>
+
+
+
               </div>
             </div>
           </div>
