--- a/html/index.html
+++ b/html/index.html
@@ -1086,12 +1086,12 @@
                 <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; BookYourPet</h6>
 
                 <h4 class="fontWeight400 colorYellowVW700">Pet Booking Platform</h4>
-                <ul>
-                  <li>&#9675; B2B SaaS: pet service booking</li>
-                  <li>&#9675; B2C mobile: customer booking & payment</li>
-                  <li>&#9675; Admin dashboard: operations management</li>
+       
 
-                </ul>
+                <h5>&#9675; B2B SaaS: pet service booking</h5>
+                <h5>&#9675; B2C mobile: customer booking & payment</h5>
+                <h5>&#9675; Admin dashboard: operations management</h5>
+
 
 
               </div>
@@ -1109,10 +1109,9 @@
                 <h6 class="TextPoppins textItalic">2023 – 2024</h6>
                 <h6 class="TextPoppins textItalic fontWeight400">Part-time &#64; LASO Health</h6>
                 <h4 class="fontWeight400 colorYellowVW700">Prescription Medication Sales Platform </h4>
-                <ul>
-                  <li>&#9675; Marketing website: UX research for consumer messaging</li>
-                  <li>&#9675; Super Admin panel: user account management & permission control</li>
-                </ul>
+
+                <h5>&#9675; Marketing website: UX research for consumer messaging</h5>
+                <h5>&#9675; Super Admin panel: user account management & permission control</h5>
 
               </div>
             </div>
@@ -1129,9 +1128,8 @@
                 <h6 class="TextPoppins textItalic">2023</h6>
                 <h6 class="TextPoppins textItalic">Part-time &#64; Modernized Mobile LLC</h6>
                 <h4 class="fontWeight400 colorYellowVW700">Clean Spaces App</h4>
-                <ul>
-                  <li>&#9675; Tablet-based Admin Panel</li>
-                </ul>
+
+                <h5>&#9675; Tablet-based Admin Panel</h5>
               </div>
             </div>
           </div>
@@ -1415,43 +1413,40 @@
   <ul class="tags" id="TagsCloud">
 
     <!-- Identity -->
-    <li class="tag"><span class="box">Creative Designer & Strategic Thinker</span></li>
-    <li class="tag"><span class="box">System-Level Thinking in UX</span></li>
-    <li class="tag"><span class="box">UX Designer · SF Bay Area</span></li>
+    <li class="tag"><span class="box">Creative UX Designer & Strategic Thinker</span></li>
+    <li class="tag"><span class="box">System-Level UX Architecture</span></li>
+    <li class="tag"><span class="box">Based in SF Bay Area</span></li>
 
     <!-- Roles & Domains -->
-    <li class="tag"><span class="box">Marketplace UX for Baby Gear Rentals (Mobile & Web)</span></li>
-    <li class="tag"><span class="box">B2B Inventory Management Experience</span></li>
-    <li class="tag"><span class="box">B2B SaaS Product Design</span></li>
+    <li class="tag"><span class="box">Marketplace UX · Baby Gear Rentals</span></li>
+    <li class="tag"><span class="box">Inventory Management · B2B SaaS</span></li>
+    <li class="tag"><span class="box">B2B Product Platform Design</span></li>
 
     <!-- Skills & Tools -->
-    <li class="tag"><span class="box">Design Systems & Responsive Layouts in Figma</span></li>
-    <li class="tag"><span class="box">Front-End: HTML, CSS, JavaScript, EJS</span></li>
-    
+    <li class="tag"><span class="box">Figma Design Systems · Responsive UI</span></li>
+    <li class="tag"><span class="box">Frontend Dev: HTML, CSS, JS, EJS</span></li>
+
     <!-- UX Expertise -->
-    <li class="tag"><span class="box">Design Thinking in Action</span></li>
-    <li class="tag"><span class="box">User-Centered Workflow Design</span></li>
-    <li class="tag"><span class="box">Journey Mapping for Complex Flows</span></li>
-    <li class="tag"><span class="box">Usability Testing & Iteration</span></li>
-    <li class="tag"><span class="box">UX Research & Insights</span></li>
+    <li class="tag"><span class="box">Practical Design Thinking</span></li>
+    <li class="tag"><span class="box">Workflow Mapping & Optimization</span></li>
+    <li class="tag"><span class="box">Complex Journey Mapping</span></li>
+    <li class="tag"><span class="box">UX Research · Usability Iteration</span></li>
+    <li class="tag"><span class="box">Quant & Qual UX Insights</span></li>
 
     <!-- Deliverables -->
-    <li class="tag"><span class="box">Live SaaS & Mobile Design Case Studies</span></li>
-    <li class="tag"><span class="box">Design Impact on Conversion & Engagement</span></li>
+    <li class="tag"><span class="box">Live Case Studies: SaaS & Mobile</span></li>
+    <li class="tag"><span class="box">Conversion-Focused Design Impact</span></li>
 
     <!-- Mindset -->
     <li class="tag"><span class="box">Collaborative Problem Solver</span></li>
-    <li class="tag"><span class="box">Cross-Functional Collaboration with PM & Engineering</span></li>
-    <li class="tag"><span class="box">Always Iterating, Always Learning</span></li>
-    <li class="tag"><span class="box">Tech-Driven Design Innovation</span></li>
-    <li class="tag"><span class="box">Accessibility Considerations in UX</span></li>
+    <li class="tag"><span class="box">PM & Eng Cross-Functional Partner</span></li>
+    <li class="tag"><span class="box">Always Iterating · Always Learning</span></li>
+    <li class="tag"><span class="box">Tech-Driven Design Thinking</span></li>
+    <li class="tag"><span class="box">Accessibility-First UX Mindset</span></li>
 
   </ul>
 </div>
-
-
-
-  <div class="blankHXS"></div>
+<div class="blankHXS"></div>
 
   </section>
 
