new landing page

--- a/html/architecture/narrow_stripes/index.html
+++ b/html/architecture/narrow_stripes/index.html
@@ -376,8 +376,12 @@
 
     <!-- Roles & Domains -->
     <li class="tag"><span class="box">Marketplace UX · Baby Gear Rentals</span></li>
-    <li class="tag"><span class="box">Inventory Management · B2B SaaS</span></li>
-    <li class="tag"><span class="box">B2B Product Platform Design</span></li>
+
+    <li class="tag"><span class="box">B2B Partner Tools · Inventory Management</span></li>
+
+    <li class="tag"><span class="box">Pet Service Booking Platform · B2B SaaS</span></li>
+    <li class="tag"><span class="box">Admin Dashboards · Scheduling & Ops UX</span></li>
+
 
     <!-- Skills & Tools -->
     <li class="tag"><span class="box">Figma Design Systems · Responsive UI</span></li>
@@ -404,7 +408,6 @@
   </ul>
 </div>
 <div class="blankHXS"></div>
-
   
 
 
