--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 
   <link rel="canonical" href="https://vickywang.me/">
   <title>Vicky W. | UX Designer</title>
-  <meta name="description" content="Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.">
+  <meta name="description" content="Vicky Wang is a UX designer specializing in B2B SaaS and consumer platforms—crafting scalable, user-friendly solutions for complex workflows.">
   <meta name="author" content="Vicky W.">
 
   
@@ -22,7 +22,7 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Vicky W. | UX Designer">
-  <meta property="og:description" content="Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.">
+  <meta property="og:description" content="Vicky Wang is a UX designer specializing in B2B SaaS and consumer platforms—crafting scalable, user-friendly solutions for complex workflows.">
   <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_photography.png">
@@ -31,7 +31,7 @@
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
   <meta property="twitter:title" content="Vicky W. | UX Designer">
-  <meta property="twitter:description" content="Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.">
+  <meta property="twitter:description" content="Vicky Wang is a UX designer specializing in B2B SaaS and consumer platforms—crafting scalable, user-friendly solutions for complex workflows.">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_photography.png">
 
   <!-- Favicon -->
@@ -1419,8 +1419,12 @@
 
     <!-- Roles & Domains -->
     <li class="tag"><span class="box">Marketplace UX · Baby Gear Rentals</span></li>
-    <li class="tag"><span class="box">Inventory Management · B2B SaaS</span></li>
-    <li class="tag"><span class="box">B2B Product Platform Design</span></li>
+
+    <li class="tag"><span class="box">B2B Partner Tools · Inventory Management</span></li>
+
+    <li class="tag"><span class="box">Pet Service Booking Platform · B2B SaaS</span></li>
+    <li class="tag"><span class="box">Admin Dashboards · Scheduling & Ops UX</span></li>
+
 
     <!-- Skills & Tools -->
     <li class="tag"><span class="box">Figma Design Systems · Responsive UI</span></li>
@@ -1447,7 +1451,6 @@
   </ul>
 </div>
 <div class="blankHXS"></div>
-
   </section>
 
   
