--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -134,43 +134,28 @@
 <!-- progressBarScroll -->
   
 
-
-
-
-
-
-
-
-
-<!-- header -->
-
-
-
-
-
-
-
-
-
-  <header>
-    <nav class="header " id="header">
-      <div class="headerContainer">
-        <a href="/" class="marginS centerVer pointer Grid--center"> 
-          <div class="arrow-container moveBackArrow">
-            <div class="left-arrow "></div>
-         </div>
-         <h4 class="backText">BACK</h4>
-        </a>
-        <div class="navbar">
-          <a href="/"><img class="pointer widthXXS marginS" src="/icon/LOGOtxtOnly.svg" alt="VW" title="vickywang.me"></a>
-
+<header>
+  <nav class="header colorBgWhieTrans" id="header">
+    <div class="headerContainer">
+      <a class="row marginS" href="javascript:void(0);" onclick="history.back(); return false;">
+        <div class="arrow-container moveBackArrow">
+          <div class="left-arrow "></div>
         </div>
+        <h4 class="backText ">Back</h4>
+      </a>
+      <!--
+      
+            <div class="navbar">
+        <a href="/"><img class="pointer widthXXS marginS" src="/icon/LOGOtxtOnly.svg" alt="VW" title="vickywang.me"></a>
 
       </div>
-    </nav>
-  
-  </header>
-  
+      -->
+
+
+    </div>
+  </nav>
+</header>
+
   <div class="blankHM"></div>
   
 
