--- a/html/index.html
+++ b/html/index.html
@@ -1287,10 +1287,10 @@
               <div class="uia-card__intro">
                 <h3 class="page__job-name fontWeight400">Professional Training & Certifications</h3>
                 <h6 class="TextPoppins textItalic fontWeight400">2021 – Present, Online</h6>
-                <h6>&#9675; Udemy: The Complete <a href="/javascript-learning/" class="textUnderline">JavaScript</a> (2024)
+                <h6>&#9675; Udemy: The Complete <a href="/javascript-learning/" class="textUnderline">JavaScript</a> (2024 - 2025)
                 </h6>
 
-                <h6>&#9675;<a href="https://www.udemy.com/certificate/UC-052eaeb2-989a-42a8-8481-5035c55fd42c/" class="textUnderline"> Become a Product Manager</a> (2023)
+                <h6>&#9675;<a href="https://www.udemy.com/certificate/UC-052eaeb2-989a-42a8-8481-5035c55fd42c/" class="textUnderline"> Become a Product Manager</a> (2024)
                 </h6>
 
 
