--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -131,45 +131,34 @@
   </div>
 </div>
 <!-- progressBarScroll -->
+
+
+
   
 
-
-
-
-
-
-
-
-
-<!-- header -->
-
-
-
-
-
-
-
-
-
-  <header>
-    <nav class="header colorBgWhieTrans" id="header">
-      <div class="headerContainer">
-        <a href="/" class="marginS centerVer pointer Grid--center"> 
-          <div class="arrow-container moveBackArrow">
-            <div class="left-arrow "></div>
-         </div>
-         <h4 class="backText">BACK</h4>
-        </a>
-        <div class="navbar">
-          <a href="/"><img class="pointer widthXXS marginS" src="/icon/LOGOtxtOnly.svg" alt="VW" title="vickywang.me"></a>
-
+<header>
+  <nav class="header colorBgWhieTrans" id="header">
+    <div class="headerContainer">
+      <a class="row marginS" href="javascript:void(0);" onclick="history.back(); return false;">
+        <div class="arrow-container moveBackArrow">
+          <div class="left-arrow "></div>
         </div>
+        <h4 class="backText ">Back</h4>
+      </a>
+      <!--
+      
+            <div class="navbar">
+        <a href="/"><img class="pointer widthXXS marginS" src="/icon/LOGOtxtOnly.svg" alt="VW" title="vickywang.me"></a>
 
       </div>
-    </nav>
-  
-  </header>
-   <div class="blankHM"></div>
+      -->
+
+
+    </div>
+  </nav>
+</header>
+
+  <div class="blankHM"></div>
   
 
 <div class="wrapper">
@@ -183,15 +172,15 @@
 </div>
 
 
-    <div class="wrapper">
-      <div class="Grid Grid--full Grid--gutters">
-        <div class="Grid-cell">
-          <div class="element">
-            <h1 class="specialTextL fontWeight700">I love capturing the beauty of nature.</h1>
-          </div>
+  <div class="wrapper">
+    <div class="Grid Grid--full Grid--gutters">
+      <div class="Grid-cell">
+        <div class="element">
+          <h1 class="specialTextL fontWeight700">I love capturing the beauty of nature.</h1>
         </div>
       </div>
     </div>
+  </div>
   <div class="wrapper">
     <div class="Grid Grid--full Grid--gutters">
       <div class="Grid-cell">
