new portfolio structure

--- a/html/index.html
+++ b/html/index.html
@@ -25,14 +25,14 @@
   <meta property="og:description" content="Vicky Wang is a UX designer specializing in B2B SaaS and consumer platforms—crafting scalable, user-friendly solutions for complex workflows.">
   <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_photography.png">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
   <meta property="twitter:title" content="Vicky W. | UX Designer">
   <meta property="twitter:description" content="Vicky Wang is a UX designer specializing in B2B SaaS and consumer platforms—crafting scalable, user-friendly solutions for complex workflows.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_photography.png">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
